# Cfits

./: .gitignore  .travis.yml  00CORE-util_8c.html  00CORE_8c.html  00CORE_8c.js  00CORE_8h.html  00CORE_8h.js  00CORE_8h_source.html  AOloop0_8conf.html  AOloopControl_8c.html  AOloopControl_8c.js  AOloopControl_8h.html  AOloopControl_8h.js  AOloopControl_8h_source.html  AOsystSim_8c.html  AOsystSim_8c.js  AOsystSim_8h.html  AOsystSim_8h.js  AOsystSim_8h_source.html  AtmosphericTurbulence_8c.html  AtmosphericTurbulence_8c.js  AtmosphericTurbulence_8h.html  AtmosphericTurbulence_8h.js  AtmosphericTurbulence_8h_source.html  CLIcore_8c.html  CLIcore_8c.js  CLIcore_8h.html  CLIcore_8h.js  CLIcore_8h_source.html  CLIcore_8md.html  COREMOD__arith-util_8c.html  COREMOD__arith_8c.html  COREMOD__arith_8c.js  COREMOD__arith_8h.html  COREMOD__arith_8h.js  COREMOD__arith_8h_source.html  COREMOD__iofits-util_8c.html  COREMOD__iofits_8c.html  COREMOD__iofits_8c.js  COREMOD__iofits_8h.html  (+372 more)
doc/: help.txt  (+2 more)
src/: CLIcore.c  CLIcore.h  CLIcore.md  Cfits.c  Cfits.c~  Cfits.h  ImageStruct.h  Makefile  Makefile.am  Makefile.am~  Makefile.in  README.md  calc_bison.c  calc_bison.h  calc_bison.y  calc_flex.c  calc_flex.l  initmodules.c
src/.deps/: 00CORE.Po  COREMOD_arith.Po  Cfits.Po  cfits-Cfits.Po
src/00CORE/: 00CORE.c  00CORE.h  Makefile  Makefile.am  Makefile.in  lib00core.la
src/00CORE/.deps/: 00CORE.Plo
src/AOloopControl/: #AOloopControl.c#  .#AOloopControl.c  AOloopControl.c  AOloopControl.h  Makefile  Makefile.in  README.md
src/AOloopControl/.deps/: AOloopControl.Plo
src/AOloopControl/doc/: AOloopControl.html  AOloopControl.md  AOloopControl_figs.ppt  css
src/AOloopControl/docdir/: AOloopControl.html  AOloopControl.md  AOloopControl.md.post  AOloopControl_figs.ppt
src/AOloopControl/scripts/: MeasDMmodesRec  MeasLoopPSD  MeasureActMap  MeasureLatency  alignPcam  aolCleanZrespmat  aolMeasureZrespmat  aolconf  aolctr  aolmkmodes  aolrun  mkDMslaveAct  mkModes  modesextract0  modesextract1  script_aol2test  setMultRange  syncscripts  synscript  synscripts
src/AOloopControl_DM/: AOloopControl_DM.c  AOloopControl_DM.h  Makefile.in
src/AOloopControl_IOtools/: AOloopControl_IOtools.c  AOloopControl_IOtools.h
src/AOloopControl_PredictiveControl/: AOloopControl_PredictiveControl.c  AOloopControl_PredictiveControl.h
src/AOloopControl_acquireCalib/: AOloopControl_acquireCalib.c
src/AOloopControl_compTools/: Makefile.am
src/AOloopControl_perfTest/: AOloopControl_perfTest.c  AOloopControl_perfTest.h
src/AOsystSim/: AOsystSim.c  AOsystSim.h  Makefile  Makefile.am  Makefile.in
src/AOsystSim/.deps/: AOsystSim.Plo
src/AtmosphereModel/: AtmosphereModel.c  AtmosphereModel.h  Makefile.in
src/AtmosphericTurbulence/: AtmosphericTurbulence.c  AtmosphericTurbulence.h  Makefile  Makefile.am  Makefile.in  WFsim.conf
src/AtmosphericTurbulence/.deps/: AtmosphericTurbulence.Plo
src/AtmosphericTurbulence/scripts/: runturb
src/COREMOD_arith/: COREMOD_arith-util.c  COREMOD_arith.c  COREMOD_arith.h  Makefile  Makefile.am  Makefile.in  libcoremodarith.la
src/COREMOD_arith/.deps/: COREMOD_arith.Plo
src/COREMOD_fft/: .Makefile.am.swp  COREMOD_fft-util.c  COREMOD_fft.c  COREMOD_fft.c~  COREMOD_fft.h  COREMOD_fft.lo  Makefile  Makefile.am  Makefile.in  libcoremodfft.la
src/COREMOD_fft/.libs/: libcoremodfft.la
src/COREMOD_info/: COREMOD_info-util.c  COREMOD_info.c  COREMOD_info.c~  COREMOD_info.h  COREMOD_info.lo  Makefile  Makefile.am  Makefile.in  libcoremodinfo.la
src/COREMOD_info/.deps/: COREMOD_info.Plo
src/COREMOD_iofits/: COREMOD_iofits-util.c~  COREMOD_iofits.c  COREMOD_iofits.c~  COREMOD_iofits.h  COREMOD_iofits.h~  Makefile  Makefile.am  Makefile.in  libcoremodiofits.la
src/COREMOD_memory/: COREMOD_memory-util.c~  COREMOD_memory.c  COREMOD_memory.c~  COREMOD_memory.h  COREMOD_memory.h~  Makefile  Makefile.am  Makefile.in  libcoremodmemory.la
src/COREMOD_tools/: .#COREMOD_tools.c  COREMOD_tools-util.c~  COREMOD_tools.c  COREMOD_tools.c~  COREMOD_tools.h  COREMOD_tools.h~  Makefile  Makefile.am  Makefile.in  libcoremodtools.la
src/FPAOloopControl/: FPAOloopControl.c  FPAOloopControl.h  Makefile.am  Makefile.in  README.md
src/ImageCreate/: ImCreate_test.c  ImageCreate.c  ImageCreate.h  Makefile.am  Makefile.in
src/ImageStreamIO/: ImageStreamIO.c  ImageStreamIO.h  Makefile.in
src/OptSystProp/: Makefile  Makefile.am  Makefile.in  OptSystProp.c  OptSystProp.h
src/OpticsMaterials/: Makefile  Makefile.in  OpticsMaterials.c  OpticsMaterials.h
src/PIAACMCsimul/: Makefile  Makefile.in  PIAACMCsimul.c  PIAACMCsimul.h  README.md  libpiaacmcsimul.la
src/SCExAO_DM/: Makefile  Makefile.am  Makefile.in  SCExAO_DM.c  SCExAO_DM.h
src/SCExAO_control/: Makefile.am  Makefile.in  SCExAO_control.c  SCExAO_control.h
src/TransitLC/: Makefile.am  Makefile.in  TransitLC.c  TransitLC.h
src/WFpropagate/: Makefile  Makefile.in  WFpropagate.c  libwfpropagate.la
src/ZernikePolyn/: Makefile  Makefile.in  ZernikePolyn.c  ZernikePolyn.h  libzernikepolyn.la
src/coronagraphs/: Makefile  Makefile.in  coronagraphs.c  coronagraphs.h  libcoronagraphs.la
src/cudacomp/: Makefile  Makefile.in  cudacomp.c  cudacomp.h
src/fft/: Makefile  Makefile.am  Makefile.in  fft.c  fft.h  libfft.la
src/image_basic/: Makefile  Makefile.in  image_basic.c  image_basic.h
src/image_filter/: Makefile  Makefile.in  image_filter.c
src/image_format/: Makefile  Makefile.am  Makefile.in  image_format.c  image_format.h  libimageformat.la
src/image_gen/: Makefile  Makefile.in  image_gen.c  image_gen.h  libimagegen.la
src/img_reduce/: .Makefile.am.swp  Makefile.am  Makefile.in  img_reduce.c  img_reduce.h
src/info/: Makefile  Makefile.in  info.c  info.h  libinfo.la
src/kdtree/: Makefile  Makefile.in  kdtree.c  kdtree.h
src/linARfilterPred/: Makefile.am  Makefile.in  linARfilterPred.c  linARfilterPred.h
src/linopt_imtools/: Makefile  Makefile.in  linopt_imtools.c  linopt_imtools.h
src/psf/: Makefile  Makefile.in  psf.c  psf.h
src/statistic/: Makefile  Makefile.in  libstatistic.la  statistic.c
(+916 files in other folders)
